# review_talk

./: .gitignore  CLAUDE.md  ERD.md  README.md  chat.md  check_special_deals.py  deburg.md  requirements.txt  reviews.csv  systemprompt.md
docs/: CHECKPOINTS_PHASE1.md  (+6 more)
reviewtalk-backend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  ERD.md  README.md  backend_logs.txt  backend_logs_new.txt  check_both_db.py  check_db.py  check_reviews.py  check_special_db.py  env.example.txt  env_template.txt  init_db.py  main.py  pyproject.toml  temp_check.py  temp_check2.py  test_special_deals.py
reviewtalk-backend/app/: database.py  database_migration.py  main.py
reviewtalk-backend/app/api/: __init__.py
reviewtalk-backend/app/api/routes/: account.py  chat.py  chat_room.py  conversation.py  crawl.py  products.py  special_deals.py
reviewtalk-backend/app/core/: config.py
reviewtalk-backend/app/infrastructure/: chat_room_repository.py  conversation_repository.py  conversation_room_repository.py  product_repository.py  special_product_repository.py  unified_product_repository.py
reviewtalk-backend/app/models/: schemas.py
reviewtalk-backend/app/services/: ai_service.py  crawl_product_review_service.py  crawl_service.py  special_deals_manage_service.py  special_deals_service.py
reviewtalk-backend/app/utils/: cache.py  scheduler.py  url_utils.py
reviewtalk-backend/docs/: PROJECT_OVERVIEW.md
reviewtalk-backend/tests/: test_ai_service.py  test_cache.py  test_chat.py  test_chat_room.py  test_conversation.py  test_conversation_repository.py  test_schemas.py
(+78 files in other folders)
